--- a/app/src/main/res/layout/fragment_03.xml
+++ b/app/src/main/res/layout/fragment_03.xml
@@ -120,8 +120,13 @@
         android:textColor="@color/text_3"
         android:textSize="@dimen/text_size03" />
 
+    <ImageView
+        android:id="@+id/iv_img"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/sl_list"
+        android:visibility="gone"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
