--- a/app/src/main/res/layout/fragment_01.xml
+++ b/app/src/main/res/layout/fragment_01.xml
@@ -11,6 +11,7 @@
         android:background="@color/blue_bg"
         android:orientation="horizontal">
         <TextView
+            android:id="@+id/tv_year"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:gravity="center"
