--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="text_12">#e2999999</color>
     <color name="blue_bg">#1594a7</color>
     <color name="redd">#e83723</color>
+    <color name="green">#35a91e</color>
 </resources>
