--- a/app/src/main/res/layout/fragment_02.xml
+++ b/app/src/main/res/layout/fragment_02.xml
@@ -120,6 +120,7 @@
 
 
     <Button
+        android:visibility="gone"
         android:id="@+id/btn_add"
         android:layout_width="match_parent"
         android:layout_height="40dp"
